# ds_curso

./: .gitignore  README.md  clave.pem
1-Fundamentals/: hola_mundo.ipynb
2-Analytics/1-Numpy/: 1_Numpy - VACÍO.ipynb  1_Numpy.ipynb  Ejercicios Numpy I.ipynb  Ejercicios Numpy II.ipynb
2-Analytics/10-RegEx/: Ejercicios_RegEx_VACIO.ipynb
2-Analytics/2-Pandas/: 1_Introducing-Pandas-Objects.ipynb  2_Data-Indexing-and-Selection.ipynb  3_Operations-in-Pandas.ipynb  5_Concat-And-Append.ipynb  8_Aggregation-and-Grouping.ipynb
2-Analytics/5-WebScraping/: BeautifulSoup_taller_tiempo_1.ipynb  Selenium_taller.ipynb  Weather_Forecast_gelida.csv  Web_Scraping_computers_beautiful_soup_2.ipynb  ram_list_mdcomputers.xlsx
2-Analytics/6-APIs/: movies.xlsx
2-Analytics/8-Matplotlib/: ejercicios_Matplotlib.ipynb
3-Machine Learning/3-Streamlit/Parte2/Parte2 - alumno/: .env.example  Energy_visualization.py  app.py  entsoe_spain.csv  get_data.py  main.py  pyproject.toml
3-Machine Learning/3-Streamlit/Parte2/Parte2 - alumno/data/processed/: data.csv  result_model_features.csv  selected_features.csv
3-Machine Learning/3-Streamlit/Parte2/Parte2 - alumno/data/raw/: entsoe_spain_2025.csv
3-Machine Learning/3-Streamlit/Parte2/Parte2 - alumno/data/test/: test_set.csv
3-Machine Learning/3-Streamlit/Parte2/Parte2 - alumno/data/train/: train_set.csv
3-Machine Learning/3-Streamlit/Parte2/Parte2 - alumno/models/: model_lgb.pkl
5-Productivización/: Proyecto_Productivización.ipynb
autonoma/: datosFaker.avro  fakeData.parquet
mongodb_thebridge-main/: README.md
(+92 files in other folders)
