[project]
name = "session14"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=6.0",
    "entsoe-py",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
entsoe-py = { git = "https://github.com/EnergieID/entsoe-py.git" }
